<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:id="@+id/top_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintBounds"
            app:cardCornerRadius="150dp"
            android:layout_marginTop="-50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:id="@+id/settings_button"
                    android:contentDescription="@string/dare"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="24dp"
                    android:foreground="@drawable/settings" />

            <TextView
                    android:text="@string/choice"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:id="@+id/current_player_txt"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/settings_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:id="@+id/shape_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_shape"
            android:layout_marginEnd="-40dp"
            android:layout_marginTop="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp">

            <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:id="@+id/show_score"
                    android:foreground="@drawable/score"
                    android:contentDescription="@string/plus"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="-20dp"
                    android:clickable="false" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/shape_score"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toTopOf="@+id/trust_shape"
            android:layout_marginBottom="16dp"
            android:id="@+id/card"
            android:layout_marginTop="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/truth_or_dare"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:id="@+id/current_question"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/yes_button"
                    android:layout_marginBottom="16dp" />

            <Button
                    android:text="@string/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/no_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/red"
                    android:textColor="@color/white"
                    app:cornerRadius="30dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:visibility="invisible" />

            <Button
                    android:text="@string/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yes_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/green"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:cornerRadius="30dp"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:visibility="invisible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/trust_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="-30dp"
            android:layout_marginBottom="-30dp"
            app:cardCornerRadius="150dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:id="@+id/truth_button"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/truth"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:foreground="@drawable/truth_logo"
                    android:clickable="false" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/dare_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="-30dp"
            android:layout_marginBottom="-30dp"
            app:cardCornerRadius="150dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageButton
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:id="@+id/dare_button"
                    android:contentDescription="@string/dare"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:foreground="@drawable/dare_logo"
                    android:clickable="false" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/score_card_view"
            android:layout_marginBottom="-250dp"
            android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/score_text_view"
                        android:text="@string/score"
                        android:textSize="20sp"
                        android:gravity="start" />
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>