<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/add_players_layout">

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:id="@+id/top_shape_players"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="-50dp"
            app:cardCornerRadius="150dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/players_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player_list_txt"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/shape_remove"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_shape_players"
            android:layout_marginStart="-20dp"
            android:layout_marginTop="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp">

            <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:id="@+id/remove_player_button"
                    android:foreground="@drawable/remove_player"
                    android:contentDescription="@string/minus"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:clickable="false" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:id="@+id/shape_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_shape_players"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="-20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp">

            <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:id="@+id/add_player_button"
                    android:foreground="@drawable/add_player"
                    android:contentDescription="@string/plus"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:clickable="false" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/shape_remove"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_shape_players"
            android:layout_marginBottom="16dp">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/players_list"
                android:id="@+id/player_list_scroll"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:scrollbarSize="0dp">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/players_list" />
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:id="@+id/bottom_shape_players"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="-50dp"
            app:cardCornerRadius="150dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:text="@string/players_added"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/start_game_with_players"
                    android:backgroundTint="@color/red"
                    android:textColor="@color/black"
                    app:cornerRadius="20dp"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>